local https server stuff

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "leapjs": "^0.6.4"
+    "https-localhost": "^4.6.2",
+    "leapjs": "^0.6.4",
+    "node-fetch": "^2.6.0"
   }
 }
