--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,17 @@ bin-release/
 
 # Other files and folders
 .settings/
+node_modules/
 
 # Executables
 *.swf
 *.air
 *.ipa
 *.apk
+
+# SSL stuff
+cert.pem
+key.pem
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
